--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,18 @@
     <script src={{"assets/vendor/wow/wow.min.js" | relative_url}}></script>
     <script src={{"assets/vendor/scrollUp/jquery.scrollUp.min.js" | relative_url}}></script>
     <script src={{"assets/js/main.js" | relative_url}}></script>
+
+    <script>
+        if (window.netlifyIdentity) {
+            window.netlifyIdentity.on("init", (user) => {
+                if (!user) {
+                    window.netlifyIdentity.on("login", () => {
+                        document.location.href = "/admin/";
+                    });
+                }
+            });
+        }
+    </script>
 </body>
 
 </html>
