--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,9 @@
     {% if site.google_analytics %}
     {% include google-analytics.html %}
     {% endif %}
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 
 <body>
