--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -27,8 +27,12 @@
     }
 
     &-logo {
-        position: relative;
+        position: absolute;
         z-index: 2;
+        width: 400px;
+        top: 20%;
+        left: 50%;
+        transform: translate(-50%, 50%);
     }
 }
 
