--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
   <title>{{ page.title }} - {{ site.title }}</title>
   {% include fonts.html %}
 
-  <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 </head>
 
 <body>
