--- a/_sass/abstract/_variables.scss
+++ b/_sass/abstract/_variables.scss
@@ -1,3 +1,6 @@
+// BACKGROUNDS
+
+
 //  COLOURS
 $color-dark-grey: #545454;
 $color-orange: #ffae4e;
@@ -11,8 +14,8 @@ $default-transition: all 0.3s;
 // TYPOGRAPHY
 $font-size-xlg: 6rem;
 $font-size-lg: 4rem;
-$font-size-md: 2.5rem;
-$font-size-sm: 2rem;
+$font-size-md: 3rem;
+$font-size-sm: 2.4rem;
 $font-size: 1.6rem;
 
 $font-color: #3b3d41;
