--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -22,7 +22,7 @@
         text-decoration: none;
         color: $color-dark-grey;
         text-transform: uppercase;
-        font-size: $font-size-sm;
+        font-size: $font-size;
         color: $color-dark-grey;
 
     }
