--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
     {% include fonts.html %}
     <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <link rel="shortcut icon" type="image/x-icon" href=/assets/images/favicon.png>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/images/favicon.png' | relative_url }}">
 </head>
