--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,6 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     {% include fonts.html %}
-    <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/images/favicon.png' | relative_url }}">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/img/favicon.png' | relative_url }}">
 </head>
