--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,11 @@
 <section class="hero">
     <div class="hero-logo">
-        {% include svg/logo.html %}
+        <div class="hero-logo-desktop">
+            {% include svg/logo.html %}
+        </div>
+        <div class="hero-logo-mobile">
+            {% include svg/logo-mobile.html %}
+        </div>
     </div>
     <div class="hero-fern hero-fern--bottom-left">
         <img src="/assets/img/fern2.svg" alt="Fern decoration" class="fern-image">
