--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
     <div class="hamburger-menu-grid">
         <div class="hamburger-menu-bg">
             <div class="hamburger-logo">
-                {% include svg/logo.html %}
+                {% include svg/logo-mobile.html %}
             </div>
         </div>
         <div class="hamburger-menu-content">
