--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -12,7 +12,7 @@
         justify-content: center;
         align-items: center;
         padding-top: 2rem;
-        grid-gap: 1rem;
+        grid-gap: 1.5rem;
     }
 
     &-link {
@@ -110,15 +110,14 @@
 }
 
 .hamburger-logo {
-    width: 95%;
+    max-width: 250px;
     height: auto;
-    filter: brightness(1.1) contrast(1.1);
     transition: transform 0.3s ease;
 
     svg {
-        width: 95%;
+        width: 150px;
         height: auto;
-        margin-top: 5rem;
+        margin-top: 2rem;
     }
 }
 .hamburger-menu-content {
@@ -134,12 +133,12 @@
 
 .hamburger-close {
     position: absolute;
-    top: 2rem;
-    right: 2rem;
+    top: 0;
+    right: 0.5rem;
     background: none;
     border: none;
     color: $color-dark-grey;
-    font-size: 2.5rem;
+    font-size: 3rem;
     cursor: pointer;
     z-index: 2;
 }
@@ -148,6 +147,7 @@
     list-style: none;
     padding: 0;
     margin: 0 0 2.5rem 0;
+    margin-left: 1rem;
 }
 .hamburger-nav li {
     margin-bottom: 1.5rem;
@@ -219,11 +219,6 @@
     }
     .hamburger-nav a {
         font-size: 1.5rem;
-    }
-
-    .hamburger-close {
-        top: 1rem;
-        right: 1rem;
     }
 }
 
