--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -15,7 +15,7 @@
         z-index: 1;
 
         &--bottom-left {
-            bottom: 50px;
+            bottom: 30px;
             left: -80px;
 
             @include respond(sm) {
@@ -33,8 +33,9 @@
             }
 
             @include respond(xs) {
+                right: -225px;
                 width: 100%;
-
+            }
         }
     }
 
