--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -9,6 +9,7 @@
     align-items: center;
     flex-direction: column;
     position: relative;
+    overflow: hidden;
 
     &-fern {
         position: absolute;
@@ -21,6 +22,10 @@
             @include respond(sm) {
                 bottom: -45px;
             }
+
+            @include respond(xs) {
+                bottom: -60px;
+            }
         }
 
         &--top-right {
@@ -29,11 +34,10 @@
 
             @include respond(sm) {
                 top: -90px;
-                right: -120px;
+                transform: translate(100px);
             }
 
             @include respond(xs) {
-                right: -225px;
                 width: 100%;
             }
         }
