--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,6 +6,9 @@
         <div class="hero-logo-mobile">
             {% include svg/logo-mobile.html %}
         </div>
+        <div class="hero-logo-text">
+            <p>Crafting Nature’s Masterpieces, One Epic Landscape at a Time
+        </div>
     </div>
     <div class="hero-fern hero-fern--bottom-left">
         <img src="/assets/img/fern2.svg" alt="Fern decoration" class="fern-image">
