--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   {% include footer.html %}
 
   <script src="/assets/js/hamburger-menu.js"></script>
+  <script src="/assets/js/fern-animations.js"></script>
 </body>
 
 </html>
