--- a/_sass/abstract/_variables.scss
+++ b/_sass/abstract/_variables.scss
@@ -1,12 +1,11 @@
 // BACKGROUNDS
 
-
 //  COLOURS
 $color-dark-grey: #545454;
 $color-orange: #ffae4e;
 $color-bg-predominant: #f1f1f2;
 $color-bg-cream: #fff4c9;
-
+$color-black: #000000;
 
 // TRANSITIONS
 $default-transition: all 0.3s;
