basic contact implementation

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,9 @@
 // Components
 @use "components/hero";
 
+// Pages
+@use "pages/contact";
+
 // Layout
 @use "layout/nav";
 @use "layout/footer";
-
