--- a/_sass/abstract/_variables.scss
+++ b/_sass/abstract/_variables.scss
@@ -15,6 +15,7 @@ $font-size-xlg: 6rem;
 $font-size-lg: 4rem;
 $font-size-md: 3rem;
 $font-size-sm: 2.4rem;
+$font-size-xs: 1.8rem;
 $font-size: 1.6rem;
 
 $font-color: #3b3d41;
