improve contact form

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,7 +1,8 @@
 <section class="contact-form-section">
     <div class="container">
         <div class="contact-form-wrapper">
-            <h2 class="contact-form-title">Send us a message</h2>
+            <h2 class="contact-form-title">Email For A Free Consultation & Quote Today
+            </h2>
             <form netlify class="contact-form" action="#" method="POST">
                 <div class="form-group">
                     <label for="name" class="form-label">Name *</label>
