--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,8 +22,15 @@
     </div>
 </div>
 
+
+
+<!-- Navigation -->
 <nav class="nav">
     <ul class="nav-list">
+        <!-- Logo -->
+        <div class="logo-sm">
+            {% include svg/logo-sm.html %}
+        </div>
         {% for item in site.data.navigation %}
         <li class="nav-item"><a class="nav-link" href="{{ item.url }}">{{ item.title }}</a></li>
         {% endfor %}
