--- a/_sass/abstract/_variables.scss
+++ b/_sass/abstract/_variables.scss
@@ -2,6 +2,7 @@
 
 //  COLOURS
 $color-dark-grey: #545454;
+$color-primary: #ffae4e;
 $color-orange: #ffae4e;
 $color-bg-predominant: #f1f1f2;
 $color-bg-cream: #fff4c9;
