--- a/_includes/contact-hero.html
+++ b/_includes/contact-hero.html
@@ -1,7 +1,8 @@
-<!-- <section class="contact-hero">
+<section class="contact-hero">
     <div class="contact-hero-content">
-        <h1 class="contact-hero-title">Email For A Free Consultation & Quote Today
+        <h1 class="contact-hero-title">Contact us
         </h1>
-        <p class="contact-hero-subtitle">We'd love to help you create the epic landscape of your dreams.</p>
+        <p class="contact-hero-subtitle">We'd love to hear about your next landscaping project! Just fill out the form
+            and we'll get back to you right away.</p>
     </div>
-</section> -->
+</section>
