--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,12 @@
 
 {% include head.html %}
 
+{% if page.scripts %}
+{% for script in page.scripts %}
+<script src="{{ script }}"></script>
+{% endfor %}
+{% endif %}
+
 <body>
 
 
