--- a/_sass/abstract/_typography.scss
+++ b/_sass/abstract/_typography.scss
@@ -5,6 +5,7 @@ $primary-font: "Montserrat", sans-serif;
 body {
     font-family: $primary-font;
     font-weight: 400;
+    background-color: $color-bg-cream;
 }
 
 h1,
