--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,8 +1,7 @@
 <section class="contact-form-section">
     <div class="container">
         <div class="contact-form-wrapper">
-            <form name='epiclandscape contact' netlify class="contact-form" data-netlify="true"
-                onsubmit="return validateForm()">
+            <form name='epiclandscape contact' netlify class="contact-form" data-netlify="true">
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" id="name" name="name" class="form-input">
@@ -35,7 +34,7 @@
 
                 <div class="form-group">
                     <label for="message" class="form-label">Message</label>
-                    <textarea id="message" name="message" class="form-textarea" rows="6"></textarea> </textarea>
+                    <textarea id="message" name="message" class="form-textarea" rows="6"></textarea>
                     <div class="error-message" id="message-error"></div>
                 </div>
 
