--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,7 +1,8 @@
 <section class="contact-form-section">
     <div class="container">
         <div class="contact-form-wrapper">
-            <form name='epiclandscape contact' netlify class="contact-form" data-netlify="true">
+            <form name='epiclandscape contact' action="/success" method="POST" netlify class="contact-form"
+                data-netlify="true">
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" id="name" name="name" class="form-input">
