--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -5,6 +5,7 @@
 @use "sass:color";
 
 .btn {
+    display: inline-block;
     background-color: $color-primary;
     color: white;
     border: none;
@@ -18,6 +19,7 @@
     transition: all 0.3s ease;
     margin-top: 20px;
     align-self: flex-start;
+    text-decoration: none;
 
     &:hover {
         transform: scale(1.05);
