--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -20,6 +20,7 @@
     margin-top: 20px;
     align-self: flex-start;
     text-decoration: none;
+    font-weight: 300;
 
     &:hover {
         transform: scale(1.05);
