--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -65,7 +65,7 @@
     &-logo-mobile {
         display: none;
         @include respond(sm) {
-            display: block;
+            display: grid;
             place-self: center;
             width: 250px;
         }
