--- a/_includes/contact-hero.html
+++ b/_includes/contact-hero.html
@@ -1,6 +1,6 @@
-<section class="contact-hero">
+<section class="contact-hero hero-spacer">
     <div class="contact-hero-content">
-        <h1 class="contact-hero-title">Contact us
+        <h1 class="contact-hero-title heading-1">Contact us
         </h1>
         <p class="contact-hero-subtitle">We'd love to hear about your next landscaping project! Just fill out the form
             and we'll get back to you right away.</p>
