--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,9 @@
 // Pages
 @use "pages/contact";
 @use "pages/success";
+@use "pages/projects";
 
 // Layout
 @use "layout/nav";
 @use "layout/footer";
+@use "layout/layout";
