--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,5 @@
     {% include fonts.html %}
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/img/favicon.png' | relative_url }}">
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </head>
