--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,6 +6,7 @@
 @use "abstract/reset";
 @use "abstract/typography";
 @use "abstract/respond";
+@use "abstract/mixins";
 
 // Components
 @use "components/hero";
