--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -2,7 +2,7 @@
 @use "./abstract/respond" as *;
 
 .hero {
-    background-color: $color-bg-cream;
+    background-color: var(--color-bg-cream);
     height: 100vh;
     width: 100%;
     display: flex;
